--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
     <head>
         <meta charset="utf-8">
         <title>"To Do List"</title>
+        <link rel="stylesheet" href="./index.css">
+
+        <!--Bootstrap CSS-->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     </head>
+
     <body>
+      <div class="container1">
         <h1>To Do List</h1>
+
+        <div class="form-group">
+            <label for="task">Task:</label>
+            <input type="text" id="task" class="form-control" placeholder="Enter task">            
+        </div>
+        <button type="submit" id="submit">Submit</button>
+
+        <hr>
+          <div id="todo-list">
+            <h5>To Do</h5>
+          </div>
+        </hr>
+        
+
+        <script src="https://agax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
         <script src="index.js"></script>
+      </div>
     </body>
 </html>
