--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
       <div class="container1">
         <h1>To Do List</h1>
 
-        <div class="form-group" id="form">
-            <label for="task">Add Task:</label>
+        <div class="form-group" id="form">            
             <input type="text" id="task" class="form-control" placeholder="Task">            
         </div>
                 
-        <button type="submit" id="button">Submit</button>
+        <button type="submit" id="button">Add Task</button>
         
         <hr>
           <div id="todo-list">
